Removed margin from drop-down peers and files 'panes' to prevent overflow bars from being hidden

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -99,12 +99,8 @@ tr.old-torrent-row {
     padding : 0.5em;
 }
 
-.drop_down_div {
+.drop_down_main {
     margin : 1em;
-}
-
-div.drop_down_peers {
-    margin : 1em 0 0 0;
 }
 
 .drop_down_h2 {
